# kge-jaxed

./: .flake8  .gitignore  README.md  pyproject.toml
.github/workflows/: lint.yaml
src/kge_jaxed/: __init__.py  pipeline.py  predict.py  registries.py  rngs.py
src/kge_jaxed/constraints/: __init__.py  constrainers.py  registry.py
src/kge_jaxed/datasets/: base.py  pykeen_datasets.py
src/kge_jaxed/evaluation/: grouped.py  grouped_ranking.py  metrics.py  ranking.py  utils.py  validation.py
src/kge_jaxed/loss_functions/: __init__.py  loss_utils.py  losses.py
src/kge_jaxed/models/: __init__.py  base_embedding.py  base_kge.py  complex.py  distmult.py  initializers.py  rotate.py  transe.py
src/kge_jaxed/negative_sampling/: uniform_negative_sampling.py
src/kge_jaxed/registry/: __init__.py  core.py
src/kge_jaxed/registry/builtins/: __init__.py  constrainers.py  initializers.py  losses.py  models.py  optimizers.py  regularizers.py  samplers.py
src/kge_jaxed/regularization/: __init__.py  lp.py  np.py  registry.py
src/kge_jaxed/trainers/: kge_trainer.py
src/kge_jaxed/training/: checkpointing.py  setup_training.py  steps.py
tests/: test_base_embedding.py  test_complex.py  test_distmult.py  test_dropout_rngs.py  test_embedding_operations.py  test_evaluation_grouped.py  test_evaluation_logic.py  test_evaluation_ranking_helpers.py  test_loss_sign_convention.py  test_nssa_loss.py  test_pipeline_model_init.py  test_pipeline_training.py  test_predict.py  test_pykeen_datasets.py  test_registry.py  test_regularization_loss.py  test_rngs.py  test_rotate.py  test_training_setup.py  test_transe.py
