[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "kge_jaxed"
dynamic = ["version"]  # Version managed by setuptools-scm
description = "A simple and lightweight package for knowledge graph embedding using JAX"
readme = "README.md"
authors = [
    { name = "Stephen Bonner"} 
]
requires-python = ">=3.12"

dependencies = [
    "dm-tree==0.1.8",
    "flax>=0.10.3",
    "grain>=0.2.12",
    "ipykernel>=6.30.1",
    "jax[cuda12]>=0.5.0",
    "pandas>=2.2.3",
    "pykeen>=1.11.0",
]

[tool.setuptools.packages.find]
where = ["src"]  # If using a src layout, otherwise remove this
include = ["kge_jaxed*"]  # Adjust to match your package name

[tool.setuptools_scm]
fallback_version = "0.1.0"
write_to = "src/kge_jaxed/_version.py"  # Generates a version file
