[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "kge_jaxed"
dynamic = ["version"]  # Version managed by setuptools-scm
description = "A simple and lightweight package for knowledge graph embedding using JAX and FlaxNNX."
readme = "README.md"
authors = [
    { name = "Stephen Bonner"} 
]
requires-python = ">=3.12"

dependencies = [
    "dm-tree==0.1.8",
    "flax>=0.10.3",
    "ipykernel>=6.30.1",
    "jax>=0.7.2 ; sys_platform == 'darwin'",
    "jax>=0.7.2 ; platform_machine != 'x86_64' and sys_platform == 'linux'",
    "jax[cuda13]>=0.7.2 ; platform_machine == 'x86_64' and sys_platform == 'linux'",
    "orbax-checkpoint>=0.11.0",
    "pandas>=2.2.3",
    "pykeen>=1.11.0",
]

[tool.setuptools.packages.find]
where = ["src"] 
include = ["kge_jaxed*"] 

[tool.setuptools_scm]
fallback_version = "0.1.0"
write_to = "src/kge_jaxed/_version.py"  # Generates a version file

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]

[tool.tox]
envlist = ["test", "lint"]

[tool.tox.env.test]
description = "Run test under {base_python}"
runner = "uv-venv-runner"
deps = ["pytest"]
commands = [["pytest", "tests/"]]

[tool.tox.env.lint]
deps = ["ruff"]
commands = [["ruff", "check", "src"], ["ruff", "format", "--check", "src"]]
skip_install = true

[tool.pytest.ini_options]
filterwarnings = [
    "ignore:Implicit conversion of an array to a dtype is deprecated; rather than dtype=arr use dtype=arr.dtype. In the future this will result in an error\\.:DeprecationWarning",
]
